--- a/css/app.css
+++ b/css/app.css
@@ -400,4 +400,11 @@ label.dropdown-item {
     .igv-app-footer > div:last-child {
       display: none; } }
 
+/* Custom styles for the "Go Back" button */
+#goBackButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 /*# sourceMappingURL=app.css.map */
