BXMD-191/BW-132/BW-134 Feat: Add CSS rule to highlight selected file link modified:   css/app.css

--- a/css/app.css
+++ b/css/app.css
@@ -407,4 +407,10 @@ label.dropdown-item {
   right: 10px;
 }
 
+/* Highlight the selected file link */
+#fileList a.selected {
+  font-weight: bold;
+  color: #007bff;
+}
+
 /*# sourceMappingURL=app.css.map */
